# hikari-risa

./: .gitignore  CLAUDE.md  noxfile.py  pyproject.toml  renovate.json  ruff.toml
.github/workflows/: ci.yml
risa/: __init__.py  _about.py  client.py  errors.py
risa/components/: __init__.py  abc.py  button.py
src/risa/: __init__.py
tests/: __init__.py  test_errors.py
