[project]
name = "hikari-risa"
version = "0.0.1"
description = "A stateless component manager for hikari."
readme = "README.md"
authors = [
    { name = "Rayakame", email = "github.android206@passmail.net" }
]
requires-python = ">=3.10"
dependencies = [
    "hikari>=2.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["risa"]

[dependency-groups]
nox = [
    "nox[uv]>=2025.5.1",
]
pyright = [
    "pyright>=1.1.402",
]
ruff = [
    "ruff>=0.12.0",
]

[tool.pyright]
include = ["risa"]
exclude = []
pythonVersion = "3.10"
typeCheckingMode = "strict"

reportUnnecessaryTypeIgnoreComment = "error"

