[project]
name = "hikari-risa"
version = "0.0.1"
description = "A component handler for hikari with first-class Components V2 support."
readme = "README.md"
authors = [
    { name = "Rayakame", email = "github.android206@passmail.net" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = ["hikari", "discord", "components", "ui"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "hikari>=2.3.3",
    "msgspec>=0.19.0",
]

[project.optional-dependencies]
redis = [
    "redis>=5.0.0",
]

[project.urls]
Repository = "https://github.com/rayakame/hikari-risa"
Issues = "https://github.com/rayakame/hikari-risa/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["risa"]

[dependency-groups]
nox = [
    "nox[uv]>=2025.5.1",
]
pyright = [
    "pyright>=1.1.402",
]
ruff = [
    "ruff>=0.12.0",
]
pytest = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pyright]
include = ["risa", "tests"]
exclude = [
    "**/__init__.py"
]
pythonVersion = "3.12"
typeCheckingMode = "strict"

reportUnnecessaryTypeIgnoreComment = "error"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
xfail_strict = true
filterwarnings = [
    "error",
]
