[project]
name = "hikari-risa"
version = "0.0.1"
description = "A component handler for hikari with first-class Components V2 support."
readme = "README.md"
authors = [
    { name = "Rayakame", email = "github.android206@passmail.net" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12,<3.15"
keywords = ["hikari", "discord", "components", "ui"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "hikari~=2.5",
    "msgspec~=0.21",
]

[project.optional-dependencies]
redis = [
    "redis~=8.0",
]

[project.urls]
Repository = "https://github.com/rayakame/hikari-risa"
Issues = "https://github.com/rayakame/hikari-risa/issues"

[build-system]
requires = ["hatchling>=1.14"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["risa"]

[dependency-groups]
nox = [
    "nox[uv]==2026.7.11",
]
pyright = [
    "pyright==1.1.411",
]
ruff = [
    "ruff==0.16.0",
]
pytest = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
]

[tool.pyright]
include = ["risa", "tests"]
exclude = [
    "**/__init__.py"
]
pythonVersion = "3.12"
typeCheckingMode = "strict"

reportUnnecessaryTypeIgnoreComment = "error"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
xfail_strict = true
filterwarnings = [
    "error",
]
